[gd_scene load_steps=10 format=3 uid="uid://bmety47uiakix"]

[ext_resource type="Texture2D" uid="uid://brultq5qed3eh" path="res://World/Interactables/drying rack.jpg" id="1_wfjoh"]
[ext_resource type="Script" path="res://World/Interactables/drying_mat.gd" id="1_y6reh"]
[ext_resource type="Script" path="res://InventoryManagers/InventoryDataDryable.gd" id="2_26flg"]
[ext_resource type="PackedScene" uid="uid://cfh3c2h78s7kr" path="res://Hit and Hurtboxes/hurtbox.tscn" id="2_bcd7l"]
[ext_resource type="Script" path="res://InventoryManagers/InventoryDataFinishedLeaves.gd" id="3_olp4a"]

[sub_resource type="Resource" id="Resource_kaoiv"]
script = ExtResource("2_26flg")
slot_datas = Array[Resource("res://InventoryManagers/SlotData.gd")]([null])

[sub_resource type="Resource" id="Resource_21fht"]
script = ExtResource("3_olp4a")
slot_datas = Array[Resource("res://InventoryManagers/SlotData.gd")]([null])

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p60bi"]
size = Vector2(46, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wapcj"]
size = Vector2(47, 31)

[node name="DryingMat" type="StaticBody2D" groups=["external_drying"]]
position = Vector2(0, 16)
collision_mask = 2
script = ExtResource("1_y6reh")
inventory_data_input = SubResource("Resource_kaoiv")
inventory_data_output = SubResource("Resource_21fht")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="ProgressClickerTimer" type="Timer" parent="Timer"]
wait_time = 0.05

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.031, 0.031)
texture = ExtResource("1_wfjoh")
region_enabled = true
region_rect = Rect2(0, 0, 1503.06, 1000.43)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6.5)
shape = SubResource("RectangleShape2D_p60bi")

[node name="Hurtbox" parent="." instance=ExtResource("2_bcd7l")]
collision_layer = 32
collision_mask = 64

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_wapcj")

[connection signal="toggle_external_drying" from="." to="." method="_on_toggle_external_drying"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer/ProgressClickerTimer" to="." method="_on_progress_clicker_timer_timeout"]
[connection signal="player_interact" from="Hurtbox" to="." method="_on_hurtbox_player_interact"]

[editable path="Hurtbox"]
